# RustyRover

./: .gitignore  LICENSE  README.md  pixi.toml
ratatui_teleoperator/: Cargo.toml  crab_1.txt
ratatui_teleoperator/ascii_art/: crab_0.txt
ratatui_teleoperator/src/: ble_client.rs  main.rs
rclrs_install_ws/: .gitignore  pixi.toml
rusty_rover_ws/: .gitignore  base.sh  pixi.toml  rusty_dependencies.repos
rusty_rover_ws/src/rusty_ble_server/: Cargo.toml  package.xml
rusty_rover_ws/src/rusty_ble_server/src/: bluetooth_server.rs  main.rs
rusty_rover_ws/src/rusty_bringup/: CMakeLists.txt  package.xml
rusty_rover_ws/src/rusty_bringup/launch/: bringup.launch.py
rusty_rover_ws/src/rusty_camera/: Cargo.toml  package.xml
rusty_rover_ws/src/rusty_camera/src/: rpi_camera_node.rs  toggle_publication.rs
rusty_rover_ws/src/rusty_command_dispatcher/: Cargo.toml  package.xml
rusty_rover_ws/src/rusty_command_dispatcher/src/: command_dispatcher.rs  pilot_node.rs  spinner_node.rs
rusty_rover_ws/src/rusty_control/: CMakeLists.txt  package.xml  rusty_control.xml
rusty_rover_ws/src/rusty_control/config/: controller.yaml
rusty_rover_ws/src/rusty_control/include/rusty_control/: i2c_device.hpp  motor.hpp  rusty_system.hpp  visibility_control.h
rusty_rover_ws/src/rusty_control/launch/: control.launch.py
rusty_rover_ws/src/rusty_control/src/: i2c_device.cpp  motor.cpp  rusty_system.cpp
rusty_rover_ws/src/rusty_control/test/: test_rusty_system.cpp
rusty_rover_ws/src/rusty_description/: CMakeLists.txt  package.xml
rusty_rover_ws/src/rusty_description/config/rusty/: base.yaml  camera.yaml  caster_wheel.yaml  wheel.yaml  wheels.yaml
rusty_rover_ws/src/rusty_description/launch/: rsp.launch.py  view_rusty.launch.py
rusty_rover_ws/src/rusty_description/meshes/: base_link_visual.stl  camera_link_visual.stl  caster_shroud_link_visual.stl  chassis.stl  right_wheel_visual.stl
rusty_rover_ws/src/rusty_description/test/: test_xacro_processing.py
rusty_rover_ws/src/rusty_description/urdf/: rusty.urdf.xacro
rusty_rover_ws/src/rusty_description/urdf/include/: base.urdf.xacro  camera.urdf.xacro  caster_wheel.urdf.xacro  caster_wheel.xacro  inertial_macros.urdf.xacro  rusty_control.urdf.xacro  wheels.urdf.xacro
rusty_rover_ws/src/rusty_gz/: CMakeLists.txt  package.xml
rusty_rover_ws/src/rusty_gz/config/: gz_bridge.yaml
rusty_rover_ws/src/rusty_gz/launch/: gz_bringup.launch.py  simulation.launch.py
rusty_rover_ws/src/rusty_gz/worlds/: empty.sdf
rusty_rover_ws/src/rusty_msgs/: CMakeLists.txt  package.xml
rusty_rover_ws/src/rusty_msgs/action/: SpinAction.action
rusty_rover_ws/src/rusty_msgs/msg/: SpinCmd.msg
rusty_rover_ws/src/rusty_rviz/: CMakeLists.txt  package.xml
rusty_rover_ws/src/rusty_rviz/config/: rusty_realtime.rviz
