[package]
name = "ratatui_teleoperator"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd", "full"] }
color-eyre = "0.6"
crossterm = "0.29"
futures = "0.3"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
uuid = "1.20"
