[package]
name = "rusty_camera"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toggle_publication"
path = "src/toggle_publication.rs"

[[bin]]
name = "rpi_camera_node"
path = "src/rpi_camera_node.rs"

[dependencies]
rclrs = "0.7"
std_msgs = "*"
sensor_msgs = "*"
std_srvs = "*"
anyhow = {version = "1", features = ["backtrace"]}
opencv = { version = "0.92", default-features = false, features = ["videoio", "imgproc", "clang-runtime"] }
example_interfaces = "*"