[package]
name = "rusty_command_dispatcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "command_dispatcher"
path = "src/command_dispatcher.rs"

[[bin]]
name = "spinner_node"
path = "src/spinner_node.rs"

[[bin]]
name = "pilot_node"
path = "src/pilot_node.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
tokio = "*"
futures = "*"
rclrs = "0.7"
std_msgs = "*"
geometry_msgs = "*"
builtin_interfaces = "*"
rusty_msgs = "*"
std_srvs = "*"