<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rusty_msgs</name>
  <version>0.0.0</version>
  <description>Custom message declaration for RustyRover</description>
  <maintainer email="antoine.vanmalleghem@botronics.be">avanmalleghem</maintainer>
  <maintainer email="christophe.simon@botronics.be">csimon-be</maintainer>
  <maintainer email="david.moli@botronics.be">davidmoli-botronics</maintainer>
  <maintainer email="enzo.ghisoni@botronics.be">EnzoGhisoni</maintainer>
  <maintainer email="nicolas.daube@botronics.be">Nicodaube</maintainer>   
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
